--- a/src/partials/new-index/new-header.html
+++ b/src/partials/new-index/new-header.html
@@ -12,8 +12,7 @@
 
                     <div class="new-header__top-actions">
 
-                        <button
-                            class="new-btn new-btn--orange new-header__category js-category-button-top">
+                        <button class="new-btn new-btn--orange new-header__category js-category-button-top">
                             <div class="new-header__category-icon">
                                 <svg width="20" height="20" viewBox="0 0 20 20" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
@@ -151,7 +150,7 @@
                             </svg>
                         </a>
 
-                        <a href="#" class="new-header__admin new-btn">
+                        <button type="button" class="new-header__admin new-btn">
                             <svg width="28" height="28" viewBox="0 0 28 28" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <g clip-path="url(#clip0_905_28920)">
@@ -169,7 +168,7 @@
                                     </clipPath>
                                 </defs>
                             </svg>
-                        </a>
+                        </button>
                     </div>
 
                 </div>
@@ -235,7 +234,7 @@
                                                 </svg>
                                             </span>
                                         </button>
-                                        <button class="new-header-category__main-btn active"
+                                        <button class="new-header-category__main-btn"
                                             data-category-target="menu2">
                                             <span class="new-header-category__main-btn-icon">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28"
@@ -377,7 +376,10 @@
                                     </div>
                                 </div>
                                 <div class="new-header-category__second-category">
-                                    <div class="new-header-category__second active" data-category-id="menu1">
+                                    <button class="new-header-category__second-close" type="button">
+                                        X
+                                    </button>
+                                    <div class="new-header-category__second" data-category-id="menu1">
                                         <div class="new-header-category__second-menu">
                                             <div class="new-header-category__second-title">Категория</div>
                                             <a href="#" class="new-header-category__second-item">Элемент</a>
