--- a/src/assets/scss/partials/catalog/_catalog.scss
+++ b/src/assets/scss/partials/catalog/_catalog.scss
@@ -72,19 +72,16 @@
             gap: 20px;
         }
 
-        @include mobile {
-            gap: 20px;
-        }
 
-        @media screen and (max-width: 500px) {
-            grid-template-columns: repeat(2, 210px);
-            justify-content: space-between;
-        }
-
-        @media screen and (max-width: 470px) {
+        @media screen and (max-width: 850px) {
             grid-template-columns: 1fr;
             gap: 10px;
         }
+
+        /* @include mobile {
+            grid-template-columns: 1fr;
+            gap: 10px;
+        } */
     }
 
     &__item {
@@ -216,6 +213,7 @@
             gap: 10px;
             align-items: center;
             color: $text-dark;
+            width: -webkit-fill-available;
 
             @include netbook {
                 background-color: #22211E;
