--- a/src/assets/scss/sections/_new-header.scss
+++ b/src/assets/scss/sections/_new-header.scss
@@ -74,7 +74,23 @@
     &-search {
       @include mobile {
         position: absolute;
-        top: -150%;
+        top: -100px;
+        left: 0;
+        background-color: #121110;
+        padding: 15px;
+        z-index: 999;
+
+        &.active {
+          top: 90px;
+        }
+
+        .new-search-block__img {
+          right: 40px;
+        }
+
+        .new-search-block__input {
+          background: #2c2b27;
+        }
       }
     }
 
@@ -208,6 +224,15 @@
         height: 20px;
       }
 
+      &.active,
+      &:hover {
+        background-color: #ebe2d0;
+
+        .new-header__search-mobile-img {
+          filter: invert(1);
+        }
+      }
+
       @include mobile {
         display: flex;
       }
@@ -217,8 +242,15 @@
       position: relative;
       display: none;
 
-      &.active{
+      &.active {
         display: flex;
+
+        @include mobile {
+          width: 100%;
+          position: absolute;
+          left: 0;
+          top: 158px;
+        }
       }
     }
 
@@ -232,6 +264,12 @@
       top: 10px;
       width: 100%;
       z-index: 10;
+      display: flex;
+      flex-direction: column;
+
+      @include mobile {
+        gap: 8px;
+      }
     }
 
     &_item {
@@ -241,6 +279,11 @@
       padding: 12px 20px;
 
       &:hover {
+        background: #31302C;
+      }
+
+      @include mobile {
+        padding: 12px;
         background: #31302C;
       }
     }
@@ -253,6 +296,11 @@
         width: 16px;
         height: 16px;
       }
+
+      @include mobile {
+        margin-right: 15px;
+        margin-left: 5px;
+      }
     }
 
     &_title {
@@ -264,6 +312,10 @@
     &_arrow {
       margin-left: 100px;
       margin-right: 15px;
+
+      @include mobile {
+        margin-left: 20px;
+      }
     }
 
     &_category {
