--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -8,3 +8,4 @@ $dark: #1c1b19;
 $font-inter: "Inter", sans-serif;
 $font-roboto: "Roboto", sans-serif;
 $font-rubik: "Rubik", sans-serif;
+$font-bebas: "Bebas Neue", sans-serif;
