--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -51,3 +51,7 @@
 /* Catalog Page */
 @import "partials/catalog/catalog";
 @import "partials/catalog/catalog-swiper";
+
+/* Static Page */
+@import "partials/static/static-header";
+@import "partials/static/warranty";
