--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -55,3 +55,8 @@
 /* Static Page */
 @import "partials/static/static-header";
 @import "partials/static/warranty";
+
+/* Reviews Page */
+@import "partials/reviews/reviews";
+@import "partials/static/warranty";
+@import "partials/static/warranty";
