--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -60,3 +60,4 @@
 @import "partials/reviews/reviews";
 @import "partials/how-to-buy/how-to-buy";
 @import "partials/static/warranty";
+@import "partials/static/support";
