--- a/src/assets/scss/_classes.scss
+++ b/src/assets/scss/_classes.scss
@@ -132,23 +132,29 @@
 }
 
 .accordion {
-  border-radius: 6px;
-  border: 1px solid #34312d;
-  background: #1c1b19;
+  border-radius: 20px;
+  border: 1px solid #1c1b19;
+  background: #191816;
   transition: 200ms ease;
 
   &:hover {
-    border: 1px solid $orange;
+    background-color: #201F1C;
+
+    .accordion__intro {
+      svg rect {
+        fill: $orange;
+      }
+    }
   }
 
   &__intro {
     position: relative;
-    color: $text-dark;
-    border-radius: 5px;
+    color: #C3B8A2;
+    border-radius: 20px;
     font-size: 16px;
-    font-weight: 400;
+    font-weight: 500;
     cursor: pointer;
-    padding: 6px;
+    padding: 25px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -183,6 +189,16 @@
   &__active {
     &:hover {
       border: 1px solid #34312d;
+      background-color: #201F1C;
+    }
+
+    .accordion__intro {
+      svg{
+        transform: rotate(180deg);
+      }
+      svg rect {
+        fill: $orange;
+      }
     }
 
     .accordion__intro_icon {
@@ -194,7 +210,7 @@
     }
 
     .accordion__content {
-      padding: 20px 10px;
+      padding: 0 30px 30px;
       opacity: 1;
     }
   }
