--- a/src/assets/scss/partials/static/_support.scss
+++ b/src/assets/scss/partials/static/_support.scss
@@ -1,6 +1,7 @@
 .support-page {
     &__contact {
         margin-top: 30px;
+        margin-bottom: 30px;
 
         .new-blog__card_img {
             height: 210px;
@@ -9,7 +10,7 @@
 
     &__topics {
         margin-top: 30px;
-        margin-bottom: 30px;
+        margin-bottom: 50px;
 
         &_main-title {
             font-size: 24px;
@@ -23,12 +24,21 @@
             display: grid;
             grid-template-columns: 1fr 1fr;
             gap: 8px;
+
+            @include mobile {
+                grid-template-columns: 1fr;
+            }
         }
 
         &_card {
             background-color: #191816;
-            padding: 30px;
+            padding: 30px 22px 22px 30px;
             border-radius: 20px;
+            transition: 200ms ease;
+
+            &:hover {
+                background-color: #201F1C;
+            }
         }
 
         &_title {
@@ -50,29 +60,324 @@
             font-weight: 400;
             font-family: $font-roboto;
             position: relative;
+            display: flex;
 
             &::before {
                 content: '';
                 position: absolute;
                 left: 0;
-                top: 50%;
-                transform: translateY(-50%);
+                top: 6px;
                 width: 11px;
                 height: 11px;
                 background-color: #6D675B;
                 border-radius: 50%;
+                transition: 300ms ease;
+            }
+
+            &:hover {
+                &::before {
+                    background-color: $orange;
+                }
             }
         }
 
-        &_link{
+        &_link {
             margin-left: 25px;
+
+            &:hover {
+                color: #EBE2D0;
+            }
         }
 
         &_more {
             display: flex;
+            gap: 12px;
             justify-content: flex-end;
-            margin-top: 20px;
+            margin-top: 30px;
+
+            svg rect {
+                transition: 300ms ease;
+            }
+
+            &:hover {
+                color: #EBE2D0;
+
+                svg rect {
+                    fill: $orange;
+                }
+            }
         }
 
+    }
+
+    &__faq {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+        margin-top: 20px;
+        margin-bottom: 40px;
+
+        &_main-title {
+            font-size: 24px;
+            font-weight: 500;
+            font-family: $font-roboto;
+            color: #EBE2D0;
+            margin-bottom: 20px;
+            margin-top: 40px;
+        }
+
+        &-item {
+            border-radius: 20px;
+            background: #191816;
+            transition: 200ms ease;
+
+            color: #C3B8A2;
+            font-size: 20px;
+            font-weight: 500;
+            cursor: pointer;
+            padding: 25px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+
+            svg rect {
+                transition: 200ms ease;
+            }
+
+            &:hover {
+                background-color: #201F1C;
+
+                svg rect {
+                    fill: $orange;
+                }
+            }
+        }
+    }
+
+    &__content {}
+}
+
+.support-topic {
+    display: flex;
+    gap: 40px;
+    align-items: flex-start;
+    margin-top: 50px;
+    margin-bottom: 40px;
+
+    @include mobile {
+        flex-direction: column-reverse;
+    }
+
+    &__content {
+        width: 100%;
+    }
+
+    &__header {
+        display: flex;
+        align-items: center;
+        gap: 18px;
+        margin-bottom: 30px;
+
+        @include mobile {
+            flex-direction: column;
+            align-items: flex-start;
+        }
+    }
+
+    &__back {
+        color: #6D675B;
+        font-size: 16px;
+        font-family: $font-roboto;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        cursor: pointer;
+        transition: 200ms ease;
+
+        &:hover {
+            color: $orange;
+
+
+            rect {
+                fill: $orange;
+            }
+
+        }
+    }
+
+    &__back-icon {
+        transform: rotate(180deg);
+        position: relative;
+        top: -1px;
+
+    }
+
+    &__aside {
+        width: 100%;
+        max-width: 340px;
+        background: #191816;
+        border-radius: 20px;
+        padding: 28px 24px;
+        color: #EBE2D0;
+        font-family: $font-roboto;
+        position: sticky;
+        top: 150px;
+        height: fit-content;
+
+        @include mobile{
+            max-width: 100%;
+            position: relative;
+            top: 0;
+        }
+    }
+
+    &__nav {
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+
+        &-list {
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
+        }
+
+        &-link {
+            display: flex;
+            align-items: flex-start;
+            gap: 10px;
+            color: #6D675B;
+
+            svg {
+                min-width: 25px;
+                position: relative;
+                top: 3px;
+            }
+
+            svg rect {
+                transition: 200ms ease;
+            }
+
+            &:hover {
+                color: #EBE2D0;
+
+                svg rect {
+                    fill: $orange;
+                }
+            }
+        }
+    }
+
+    &__nav-title {
+        font-size: 16px;
+        font-weight: 500;
+        margin-bottom: 12px;
+        color: #EBE2D0;
+    }
+
+    &__image-block {
+        display: flex;
+        align-items: flex-start;
+        gap: 18px;
+        margin-top: 18px;
+    }
+
+    &__image-num {
+        background: #22211E;
+        color: #EBE2D0;
+        font-size: 22px;
+        font-weight: 500;
+        border-radius: 8px;
+        width: 55px;
+        height: 55px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-right: 8px;
+    }
+
+    img {
+        border-radius: 18px;
+        width: 100%;
+        max-width: 530px;
+        height: 288px;
+        object-fit: cover;
+        box-shadow: 0 2px 16px rgba(0, 0, 0, 0.18);
+    }
+
+    h1 {
+        font-size: 24px;
+        font-weight: 500;
+        line-height: 1.2;
+        color: #C3B8A2;
+        font-family: $font-roboto;
+    }
+
+    h2 {
+        font-size: 20px;
+        font-weight: 500;
+        color: #C3B8A2;
+        font-family: $font-roboto;
+        margin-bottom: 12px;
+        margin-top: 28px;
+        line-height: 1.2;
+    }
+
+    p {
+        color: #6D675B;
+        font-size: 15px;
+        margin-bottom: 24px;
+        line-height: 1.6;
+    }
+
+    ul {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+        margin-top: 8px;
+        padding-left: 0;
+        list-style: none;
+    }
+
+    li {
+        display: flex;
+        align-items: flex-start;
+        gap: 16px;
+        position: relative;
+        padding-left: 28px;
+        color: #6D675B;
+        font-size: 15px;
+
+        span {
+            display: block;
+            width: 18px;
+            height: 2px;
+            background: #EBE2D0;
+            border-radius: 2px;
+            margin-top: 10px;
+            flex-shrink: 0;
+            position: absolute;
+            left: 0;
+            top: 0px;
+        }
+
+        a {
+            color: #C3B8A2;
+            font-size: 15px;
+            text-decoration: none;
+            transition: color 0.2s;
+            display: flex;
+            align-items: center;
+            gap: 6px;
+
+            &:hover {
+                color: $orange;
+            }
+        }
+    }
+
+    h1[data-anchor],
+    h2[data-anchor] {
+        scroll-margin-top: 150px;
     }
 }
