--- a/src/assets/scss/pages/_about.scss
+++ b/src/assets/scss/pages/_about.scss
@@ -1,3 +1,8 @@
+.main-about {
+    background: #0e0d0c;
+    padding-top: 150px;
+}
+
 .about-header {
     overflow: hidden;
     position: relative;
