--- a/src/assets/scss/common/_fonts.scss
+++ b/src/assets/scss/common/_fonts.scss
@@ -1,4 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
 // Для GitHub Pages используйте абсолютный путь с учетом репозитория:
-@include font-face("Bebas Neue", "/game-market/assets/fonts/BebasNeue", 400, normal);
+@include font-face("Bebas Neue", "/assets/fonts/BebasNeue", 400, normal);
