--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -61,3 +61,4 @@
 @import "partials/how-to-buy/how-to-buy";
 @import "partials/static/warranty";
 @import "partials/static/support";
+@import "partials/services/services-page";
