--- a/src/assets/scss/pages/_basket.scss
+++ b/src/assets/scss/pages/_basket.scss
@@ -732,6 +732,7 @@
         position: relative;
         display: inline-block;
         width: 50px;
+        min-width: 50px;
         height: 20px;
         margin: 0;
     }
