--- a/src/assets/scss/partials/services/_services-page.scss
+++ b/src/assets/scss/partials/services/_services-page.scss
@@ -233,6 +233,11 @@
         .accordion__intro {
             padding: 12px 10px 12px 20px;
             color: #ebe2d0;
+
+            @include mobile {
+                font-size: 14px;
+                padding: 10px;
+            }
         }
 
 
@@ -252,10 +257,15 @@
     .accordion__active .accordion__content {
         padding: 0 20px 20px;
         color: #c2baaa;
+
+        @include mobile {
+            padding: 0 15px 15px;
+        }
     }
 }
 
 .service-topup {
+    margin-top: 30px;
 
     &__block {
         display: flex;
@@ -306,11 +316,11 @@
         padding: 8px;
 
         @include netbook {
-            min-width: 110px;
-            width: 110px;
+            min-width: 95px;
+            width: 95px;
             flex-direction: column;
             gap: 8px;
-            padding: 10px;
+            padding: 5px;
             justify-content: center;
         }
 
@@ -414,6 +424,11 @@
             width: 100%;
             height: 100%;
             padding: 10px 20px;
+
+            @include mobile {
+                gap: 10px;
+                padding: 10px;
+            }
         }
 
         &_logo {
@@ -429,6 +444,10 @@
             width: 100%;
             max-width: 288px;
             line-height: 1.3;
+
+            @include mobile {
+                font-size: 18px;
+            }
         }
 
         &_unit {
@@ -540,6 +559,10 @@
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
             gap: 8px;
+
+            @include mobile {
+                grid-template-columns: 1fr 1fr;
+            }
         }
     }
 
@@ -1008,18 +1031,21 @@
         }
 
         &_btn {
-            font-size: 12px;
-            color: $text-dark;
-            padding: 10px 20px;
-            line-height: 1;
-            border-radius: 3px;
-            border: 1.2px solid #33302D;
-            background: linear-gradient(142deg, #342D27 0%, #222220 67.95%);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 8px;
+            background: #22211e;
+            color: #ebe2d0;
+            padding: 12px 15px;
+            position: relative;
+            z-index: 1;
+            font-size: 14px;
             transition: 200ms ease;
 
             &:hover {
                 color: white;
-                border-color: $orange;
+                background-color: $orange;
             }
 
             &_main {
@@ -1076,6 +1102,7 @@
         grid-template-columns: 1fr 1fr;
         gap: 10px;
         margin-top: 10px;
+        margin-bottom: 10px;
     }
 
     &__method {
@@ -1144,8 +1171,8 @@
     transition: background 0.2s;
 
     @include mobile {
-        padding: 4px 6px;
-        font-size: 10px;
+        padding: 6px 8px;
+        font-size: 11px;
         gap: 5px;
     }
 
